examples/test/testpolicy19154.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19154
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key6: value23
      key23: value14
      key15: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value10
          key7: value30
          key16: value36
